--- a/Fiss/Fiss.csproj
+++ b/Fiss/Fiss.csproj
@@ -4,7 +4,8 @@
 	  <PackageId>Fiss</PackageId>
 	  <Version>0.1.1</Version>
 	  <Authors>Kataane</Authors>
-	  <TargetFramework>net6.0</TargetFramework>
+	  <TargetFrameworks>net7.0;net6.0;netstandard2.0;</TargetFrameworks>
+      <LangVersion>10</LangVersion>
 	  <ImplicitUsings>enable</ImplicitUsings>
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	  <Title>Fiss</Title>
@@ -31,6 +32,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Condition="'$(TargetFramework)' == 'netstandard2.0'" Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
