--- a/Fiss/Fiss.csproj
+++ b/Fiss/Fiss.csproj
@@ -4,9 +4,9 @@
 	  <PackageId>Fiss</PackageId>
 	  <Version>0.1.1</Version>
 	  <Authors>Kataane</Authors>
-	  <TargetFrameworks>net7.0;net6.0;netstandard2.0;</TargetFrameworks>
+	  <TargetFrameworks>net7.0;net6.0;netstandard2.0;net462;</TargetFrameworks>
       <LangVersion>10</LangVersion>
-	  <ImplicitUsings>enable</ImplicitUsings>
+	  <ImplicitUsings>disable</ImplicitUsings>
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	  <Title>Fiss</Title>
 	  <Description>Wrapper to facilitate interaction with MOEX ISS.</Description>
@@ -32,7 +32,8 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Condition="'$(TargetFramework)' == 'netstandard2.0'" Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
+    <PackageReference Condition="'$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'net462'" Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
+    <PackageReference Condition="'$(TargetFramework)' == 'net462'" Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
 </Project>
